<resources>
    <string name="app_name">北京勘察</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="editHole">注：紫色的圈代表精确度，圈子越小精确度越高。基准点的的定位很重要，应尽量靠近勘探点，等待精确度较高且稳定时再进行定位。</string>
    <string name="record_operatepersion">注:拍照处应拍摄机长自拍照</string>
    <string name="record_operatecode">注:拍照处应拍摄钻机铭牌等钻机相关信息</string>
    <string name="record_recordpersion">注:拍照处应拍描述员自拍照</string>
    <string name="record_scenescene">注:拍照处应拍摄场景等相关信息</string>
    <string name="record_principal">注：拍照处应拍项目负责人相关照片</string>
    <string name="record_technician">注：拍照处应拍摄工程师相关照片</string>
    <string name="record_video">注：此处录像需要录制完整提钻过程</string>
    <string name="record_layer">注：切换岩土分类时会改变描述模板。</string>
    <string name="record_scene">注：此处记录该勘探点需要补充说明的内容。。</string>
    <string name="confirmDelete">确认删除?（请一定跟项目负责人核对平台是否已完整接收到数据！）</string>
    <string name="confirmDelete2">该孔数据还未全部上传到服务器，假如删除，该数据将不复存在，您还删除否？</string>
    <string name="confirmDelete3">该项目数据还未全部上传到服务器，假如删除，该数据将不复存在，您还删除否？</string>
    <string name="confirmDelete4">该记录数据还未全部上传到服务器，假如删除，该数据将不复存在，您还删除否？</string>
    <string name="agree">确定</string>
    <string name="disagree">取消</string>
    <string name="custom">自定义</string>
    <string name="label_record_layer_type">岩土分类(可自定义)*</string>
    <string name="label_record_layer_name">岩土定名(可自定义)*</string>
    <string name="label_record_layer_wzcf">物质成份(可自定义)</string>
    <string name="label_record_layer_ys">颜色(可自定义)</string>
    <string name="label_record_layer_klzc">颗粒组成(可自定义)</string>
    <string name="label_record_layer_klxz">颗粒形状(可自定义)</string>
    <string name="label_record_layer_klpl">颗粒排列</string>
    <string name="label_record_layer_kljp">颗粒级配</string>
    <string name="label_record_layer_sd">湿度</string>
    <string name="label_record_layer_msd">密实度</string>
    <string name="label_record_layer_jyx">均匀性</string>
    <string name="label_record_layer_zt">状态</string>
    <string name="label_record_layer_bhw">包含物(可自定义)</string>
    <string name="label_record_layer_ftfchd">粉土分层厚度(可自定义)</string>
    <string name="label_record_layer_fzntfchd">粉质黏土分层厚度(可自定义)</string>
    <string name="label_record_layer_jc">夹层(可自定义)</string>
    <string name="label_record_layer_kx">孔隙(可自定义)</string>
    <string name="label_record_layer_czjl">垂直节理</string>
    <string name="label_record_layer_ybljx">一般粒径小(可自定义)</string>
    <string name="label_record_layer_ybljd">一般粒径大(可自定义)</string>
    <string name="label_record_layer_jdljx">较大粒径小(可自定义)</string>
    <string name="label_record_layer_jdljd">较大粒径大(可自定义)</string>
    <string name="label_record_layer_zdlj">最大粒径(可自定义)</string>
    <string name="label_record_layer_mycf">母岩成份(可自定义)</string>
    <string name="label_record_layer_fhcd">风化程度</string>
    <string name="label_record_layer_tcw">充填物(可自定义)</string>
    <string name="label_record_layer_kwzc">矿物组成(可自定义)</string>
    <string name="label_record_layer_zycf">主要成分(可自定义)</string>
    <string name="label_record_layer_cycf">次要成份(可自定义)</string>
    <string name="label_record_layer_djnd">堆积年代</string>
    <string name="label_record_layer_hsl">含水量(可自定义)</string>
    <string name="label_record_layer_jycd">坚硬程度</string>
    <string name="label_record_layer_wzcd">完整程度</string>
    <string name="label_record_layer_jbzldj">基本质量等级</string>
    <string name="label_record_layer_kwx">可挖性(可自定义)</string>
    <string name="label_record_layer_jglx">结构类型</string>
    <string name="label_record_layer_era">地质年代</string>
    <string name="hint_record_layer_type">岩土分类</string>
    <string name="hint_record_layer_name">岩土定名</string>
    <string name="hint_record_layer_wzcf">物质成分</string>
    <string name="hint_record_layer_ys">颜色</string>
    <string name="hint_record_layer_klzc">颗粒组成</string>
    <string name="hint_record_layer_klxz">颗粒形状</string>
    <string name="hint_record_layer_klpl">颗粒排列</string>
    <string name="hint_record_layer_kljp">颗粒级配</string>
    <string name="hint_record_layer_sd">湿度</string>
    <string name="hint_record_layer_msd">密实度</string>
    <string name="hint_record_layer_jyx">均匀性</string>
    <string name="hint_record_layer_zt">状态</string>
    <string name="hint_record_layer_bhw">包含物</string>
    <string name="hint_record_layer_ftfchd">粉土分层厚度</string>
    <string name="hint_record_layer_fzntfchd">黏土或粉质粘土互层分层厚度</string>
    <string name="hint_record_layer_jc">夹层</string>
    <string name="hint_record_layer_kx">孔隙</string>
    <string name="hint_record_layer_czjl">垂直节理</string>
    <string name="hint_record_layer_ybljx">一般粒径小</string>
    <string name="hint_record_layer_ybljd">一般粒径大</string>
    <string name="hint_record_layer_jdljx">较大粒径小</string>
    <string name="hint_record_layer_jdljd">较大粒径大</string>
    <string name="hint_record_layer_zdlj">最大粒径</string>
    <string name="hint_record_layer_mycf">母岩成份</string>
    <string name="hint_record_layer_fhcd">风化程度</string>
    <string name="hint_record_layer_tcw">充填物</string>
    <string name="hint_record_layer_kwzc">矿物组成</string>
    <string name="hint_record_layer_zycf">主要成分</string>
    <string name="hint_record_layer_cycf">次要成份</string>
    <string name="hint_record_layer_djnd">堆积年代</string>
    <string name="hint_record_layer_hsl">含水量</string>
    <string name="hint_record_layer_jycd">坚硬程度</string>
    <string name="hint_record_layer_wzcd">完整程度</string>
    <string name="hint_record_layer_jbzldj">基本质量等级</string>
    <string name="hint_record_layer_kwx">可挖性</string>
    <string name="hint_record_layer_jglx">结构类型</string>
    <string name="hint_record_layer_causes">地质成因</string>
    <string name="hint_record_layer_era">地质年代</string>
    <string name="progress_please_wait">请稍等...</string>
    <string name="user_hint_email">请输入邮箱账号</string>
    <string name="user_hint_password">请输入密码</string>
    <string name="hint">提示</string>
    <string name="net_no_work">网络连接不可用,是否进行设置？</string>
    <string name="go_setting">去设置</string>
    <string name="project_nav_norelate">该项目未关联，请先关联项目信息</string>
    <string name="project_search_hint">项目编号搜索</string>
    <string name="main_logout_msg">退出后将清空当前用户的登录信息（但不会清除该用户的项目信息），返回到登录页面重新登陆。确定退出吗？</string>
    <string name="main_finish_msg">是否退出应用</string>
    <string name="project_edit_title">项目详情与编辑</string>
    <string name="project_edit_hint_num">请输入项目序列号</string>
    <string name="project_edit_hint_user">用户信息丢失，请尝试重新登陆</string>
    <string name="project_edit_hint_num_have">该序列号本地已经存在</string>
    <string name="project_edit_hint_name">请输入项目名称</string>
    <string name="project_edit_hint_zxing">解析二维码失败</string>
    <string name="project_edit_num">项目序列号</string>
    <string name="project_edit_zxing">二维码扫描</string>
    <string name="project_edit_relate">关联</string>
    <string name="project_edit_name">项目名称</string>
    <string name="project_edit_code">项目编号</string>
    <string name="project_edit_leader">项目负责人</string>
    <string name="projec_edit_company">勘察单位</string>
    <string name="projec_edit_laborUnit">劳务单位</string>
    <string name="projec_edit_owner">业主</string>
    <string name="projec_edit_address">地址</string>
    <string name="projec_edit_describe">勘察大纲</string>
    <string name="hole_relate_title1">选择关联勘探点</string>
    <string name="hole_relate_title2">选择关联勘探点</string>
    <string name="hole_relate_title3">选择获取数据</string>
    <string name="hole_relate_search_hint">勘探点编号搜索</string>
    <string name="hole_relate_prompt">没有搜索结果</string>
    <string name="hole_relate_no_data">服务端未创建勘察点，无法关联</string>
    <string name="hole_relate_no_data_download">服务端没有可下载的数据</string>
    <string name="hole_relate_no_data_location">服务端未创建勘察点，无法获取</string>
    <string name="hole_list_earch_hint">勘探点编号搜索</string>
    <string name="hole_list_norelate_project">所在项目未关联</string>
    <string name="hole_list_orther_people">不可以编辑他人数据</string>
    <string name="hole_list_relate_ishave">勘探点本地已经存在关联</string>
    <string name="hole_list_no_relate_hint1">关联勘探点编号</string>
    <string name="hole_list_no_relate_hint2">已经存在</string>
    <string name="hole_edit_title">编辑勘探点</string>
    <string name="hole_edit_finish_hint2">勘探点数据不完整，请完善（描述员、场景）记录，否则不保留定位信息</string>
    <string name="hole_edit_finish_hint4">勘探点数据不完整，请完善（司钻员、钻机、描述员、场景）记录,否则不保留定位信息</string>
    <string name="hole_edit_finish_keep_edit">继续编辑</string>
    <string name="hole_edit_finish_out_edit">退出</string>
    <string name="hole_edit_save_hint2">勘探点数据不完整，请完善（描述员、场景）记录</string>
    <string name="hole_edit_save_hint4">勘探点数据不完整，请完善（司钻员、钻机、描述员、场景）记录</string>
    <string name="hole_edit_save_no_code">请输入勘探点编号</string>
    <string name="hole_edit_save_long_code">勘探点编号长度不能超过20</string>
    <string name="hole_edit_locatin_hint">未能获取定位信息，请稍等</string>
    <string name="hole_edit_change_no">请输入勘察点编号</string>
    <string name="hole_edit_change_long">勘探点编号长度不能超过20</string>
    <string name="hole_edit_change_again">勘察点编号重复</string>
    <string name="hole_edit_tv_code">勘探点编号(本地)</string>
    <string name="hole_edit_tv_relate_code">关联勘探点编号(平台)</string>
    <string name="hole_edit_btn_relate">点击获取勘探点列表</string>
    <string name="hole_edit_sp_type">勘探点类型</string>
    <string name="hole_edit_tv_elevation">高程</string>
    <string name="hole_edit_tv_depth">设计孔深</string>
    <string name="hole_edit_tv_des">技术要求</string>
    <string name="hole_edit_tv_jz">司钻员</string>
    <string name="hole_edit_tv_zj">钻机</string>
    <string name="hole_edit_tv_msy">描述员</string>
    <string name="hole_edit_tv_cj">场景</string>
    <string name="hole_edit_tv_fzr">项目负责人</string>
    <string name="hole_edit_tv_gcs">项目工程师</string>
    <string name="hole_edit_tv_lx">提钻录像</string>
    <string name="hole_edit_btn_location">定位</string>
    <string name="hole_edit_tv_no_location">未定位</string>
    <string name="hole_edit_tv_jzwd">基准纬度</string>
    <string name="hole_edit_tv_jzjd">基准经度</string>
    <string name="hole_edit_tv_jzsj">基准时间</string>
    <string name="hole_edit_tv_jsfw">警示范围(m)</string>
    <string name="hole_list_is_relate">该项目还没有序列号，请返回项目列表，关联该项目</string>
    <string name="hole_list_is_orther">不能上传别人的项目</string>
    <string name="hole_list_is_location">勘探点未定位,是否编辑勘察点，进行定位操作</string>
    <string name="hole_list_is_jz_code">机长信息缺失机长编号，请填写</string>
    <string name="hole_list_is_jz">机长信息未填写，请编辑机长信息</string>
    <string name="hole_list_is_projectid">项目部分信息丢失，请重新关联项目</string>
    <string name="hole_list_is_relate_again">勘探点未关联（或因版本关系需要重新关联该点）是否获取勘探点列表，进行关联操作</string>
    <string name="hole_relate_location_nodata">该勘探点没有位置信息(发布坐标),需要导航请联系项目负责人</string>
    <string name="hole_relate_location_please">请选择要去的位置</string>
    <string name="dictionary_title">字典库管理</string>
    <string name="dictionary_download_nodata">未获取到数据，数据为空</string>
    <string name="dictionary_upload_please">上传本地词库，将覆盖云端备份，是否上传？</string>
    <string name="dictionary_download_please">下载关联词库，将删除本地词库，是否下载？</string>
    <string name="user_update_info_title">修改账号信息</string>
    <string name="user_update_info_no_card">身份证号未填写</string>
    <string name="user_update_info_no_msyid">描述员证书号未填写</string>
    <string name="user_update_info_please">请输入正确号码</string>
    <string name="user_update_info_cardid">身份证号</string>
    <string name="user_update_info_msyid">描述员证书号</string>
    <string name="user_update_pwd_title">修改密码</string>
    <string name="user_update_pwd_p1">请输入老密码</string>
    <string name="user_update_pwd_p2">请输入新密码</string>
    <string name="user_update_pwd_p3">新密码与老密码一致，请重新填写</string>
    <string name="user_update_pwd_p4">请输入确认密码</string>
    <string name="user_update_pwd_p5">两次输入密码不一致</string>
    <string name="record_op_p1">姓名不能为空</string>
    <string name="record_op_p2">姓名最长16</string>
    <string name="record_op_p3">钻机编号最长50</string>
    <string name="record_op_p4">编号不能为空</string>
    <string name="welcome_hint_go_setting">您已经禁止弹出存储的授权操作,请在设置中手动开启</string>
    <string name="welcome_hint_no_file">取消存储授权,不能存储图片文件</string>
    <string name="welcome_hint_no_camera">取消照相机授权</string>
    <string name="welcome_hint_no_location">取消定位授权,不能获取定位信息</string>
</resources>