<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprKwzc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_kwzc"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_kwzc"/>

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprYs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_ys"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_ys" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprKljp"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_kljp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_kljp" />

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprMsd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_msd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_msd" />

    </LinearLayout>

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprKlxz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_klxz"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_klxz" />

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprSd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_sd"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_sd" />

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprJc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_jc"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_jc" />


</LinearLayout>
