<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprYs"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_ys"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_ys"/>

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprSd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_sd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_sd" />

    </LinearLayout>


    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprBhw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/hint_record_layer_bhw"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_bhw"/>

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprMsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/hint_record_layer_msd"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_msd" />


    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprJc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_jc"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_jc"/>

</LinearLayout>
