<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprZycf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/hint_record_layer_zycf"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_zycf"
        app:met_iconLeft="@mipmap/ai_icon_zhuyao" />

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprCycf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/hint_record_layer_cycf"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_cycf"
        app:met_iconLeft="@mipmap/ai_icon_ciyao" />

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/sprYs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_ys"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_ys"
        app:met_iconLeft="@mipmap/ai_icon_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprDjnd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_djnd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_djnd"
            app:met_iconLeft="@mipmap/ai_icon_duijiyears" />

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprMsd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_msd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_msd"
            app:met_iconLeft="@mipmap/ai_icon_mishidu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprJyx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_record_layer_jyx"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_jyx"
            app:met_iconLeft="@mipmap/ai_icon_junyun" />

    </LinearLayout>
</LinearLayout>
