<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprType"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_type"
            app:met_baseColor="@android:color/holo_red_light"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_type"/>

        <com.cj.record.views.MaterialBetterSpinner
            android:id="@+id/sprName"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_name"
            app:met_baseColor="@android:color/holo_red_light"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.cj.record.views.MaterialEditTextNoEmoji
            android:id="@+id/mainLayerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="主层"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            app:met_clearButton="false"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="主层" />

        <com.cj.record.views.MaterialEditTextNoEmoji
            android:id="@+id/subLayerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="亚层"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="亚层" />

        <com.cj.record.views.MaterialEditTextNoEmoji
            android:id="@+id/secondSubLayerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="次压"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            app:met_clearButton="false"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="次压层" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fltContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/edtCauses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_causes"
        android:phoneNumber="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/hint_record_layer_causes" />

    <com.cj.record.views.MaterialBetterSpinner
        android:id="@+id/edtEra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:hint="@string/hint_record_layer_era"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_era"/>
</LinearLayout>